--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
@@ -7,8 +11,37 @@ h1 {
 
 #title {
   background-color: #ff4c68;
+  color: #fff;
 }
 
 .container-fluid {
   padding: 3% 15%;
 }
+
+.title-image {
+  transform: rotate(30deg);
+}
+
+/* Navigation Bar */
+
+.navbar {
+  padding-bottom: 4.5rem;
+}
+
+.navbar-brand {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+/* Download Buttons */
+
