--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-weight: 900;
   line-height: 1.5;
 }
@@ -16,10 +16,6 @@ h1 {
 
 .container-fluid {
   padding: 3% 15%;
-}
-
-.title-image {
-  transform: rotate(30deg);
 }
 
 /* Navigation Bar */
@@ -45,3 +41,13 @@ h1 {
 
 /* Download Buttons */
 
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+
+.title-image {
+  transform: rotate(25deg);
+  width: 60%;
+}
