--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,22 @@ h1 {
   transform: rotate(25deg);
   width: 60%;
 }
+
+/* Features Text */
+
+#features i {
+  color: #ef8172;
+}
+
+#features i:hover {
+  color: #ff4c68;
+}
+
+#features h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#features p {
+  color: #8f8f8f;
+}
