--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,23 @@ h1 {
   color: #ff4c68;
 }
 
+/* Testimonial Section */
 
+#testimonials {
+  background-color: #ef8172;
+  color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+}
 
+#testimonials h2 {
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 1.5;
+}
 
-
+.testimonial-image {
+  border-radius: 50%;
+  margin: 3%;
+  width: 100px;
+}
