--- a/css/styles.css
+++ b/css/styles.css
@@ -101,3 +101,16 @@ h1 {
   margin: 3%;
   width: 100px;
 }
+
+/* Press Section */
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  margin: 20px 20px 50px;
+  width: 150px;
+}
