Add carousel to testimonial section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,8 +86,11 @@ h1 {
 #testimonials {
   background-color: #ef8172;
   color: #fff;
-  padding: 7% 15%;
   text-align: center;
+}
+
+.carousel-item {
+  padding: 7% 15%;
 }
 
 #testimonials h2 {
