--- a/css/styles.css
+++ b/css/styles.css
@@ -117,3 +117,29 @@ h1 {
   margin: 20px 20px 50px;
   width: 150px;
 }
+
+/* Pricing Section */
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+#pricing h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#pricing h2 {
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 1.5;
+}
+
+#pricing p {
+  color: #8f8f8f;
+}
+
+.price-col {
+  padding: 3% 2%;
+}
