--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -48,14 +48,18 @@ h1 {
 /* Title Image */
 
 .title-image {
+  position: absolute;
+  margin-left: 7%;
   transform: rotate(25deg);
-  width: 60%;
+  width: 20%;
 }
 
 /* Features Section */
 
 #features {
+  background-color: #fff;
   padding: 7% 15%;
+  position: relative;
 }
 
 .feature-box {
@@ -132,7 +136,7 @@ h1 {
 
 #pricing h2 {
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 3rem;
   line-height: 1.5;
 }
 
