--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,50 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
 }
 
-h1 {
-  font-family: 'Montserrat', sans-serif;
+h2, h3 {
+  font-weight: 900;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+p {
+  color:#8f8f8f;
+}
+
+/* Headings */
+
+.big-heading {
   font-size: 3.5rem;
   font-weight: 900;
   line-height: 1.5;
+  text-align: left;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
+.cta-heading {
+  font-size: 2.5rem;
 }
 
 .container-fluid {
   padding: 3% 15% 7%;
+}
+
+/* Sections */
+
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.white-section {
+  background-color: #fff;
 }
 
 /* Navigation Bar */
@@ -61,23 +90,12 @@ h1 {
 /* Features Section */
 
 #features {
-  background-color: #fff;
   padding: 7% 15%;
   position: relative;
 }
 
 .feature-box {
-  text-align: center;
   padding: 5%;
-}
-
-.feature-box h3 {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.feature-box p {
-  color: #8f8f8f;
 }
 
 .icon {
@@ -93,18 +111,14 @@ h1 {
 
 #testimonials {
   background-color: #ef8172;
-  color: #fff;
-  text-align: center;
+}
+
+.testimonial-header {
+  line-height: 1.5;
 }
 
 .carousel-item {
   padding: 7% 15%;
-}
-
-#testimonials h2 {
-  font-weight: 900;
-  font-size: 3rem;
-  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -117,7 +131,6 @@ h1 {
 
 #press {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -130,24 +143,11 @@ h1 {
 
 #pricing {
   padding: 75px;
-  text-align: center;
 }
 
-#pricing h3 {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-#pricing h2 {
-  font-weight: 700;
-  font-size: 3rem;
+.pricing-heading {
   line-height: 1.5;
 }
-
-#pricing p {
-  color: #8f8f8f;
-}
-
 .price-col {
   padding: 3% 2%;
 }
@@ -155,17 +155,7 @@ h1 {
 /* Call To Action Section */
 
 #cta {
-  background-color: #ff4c68;
   padding: 5% 10% 3%;
-  text-align: center;
-}
-
-#cta h3 {
-  color: #fff;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 2.5rem;
-  font-weight: bold;
-  line-height: 1.5;
 }
 
 .bot-download-button {
@@ -175,9 +165,7 @@ h1 {
 /* Footer Section */
 
 #footer {
-  background-color: #fff;
   padding: 5% 0 3%; 
-  text-align: center;
 }
 
 .footer-icon {
@@ -185,7 +173,6 @@ h1 {
 }
 
 #footer p {
-  color: #8f8f8f;
   margin-top: 2%;
 }
 
